module(
    name = "emsdk",
    repo_name = "emsdk",
)

bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "aspect_rules_js", version = "1.42.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "rules_nodejs", version = "6.2.0")
bazel_dep(name = "bazel_features", version = "0.1.0")
